fix: logoute route
