# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Backend created by Koda using Gin",
-        "title": "Backend koda 7",
+        "description": "Backend created by ilhammursidi using Gin",
+        "title": "Ewallet-Backend",
         "contact": {},
         "license": {
             "name": "MIT"
@@ -14,6 +14,11 @@
     "paths": {
         "/auth/enter-pin": {
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create PIN for user account",
                 "consumes": [
                     "application/json"
@@ -376,7 +381,7 @@
                     "200": {
                         "description": "Profile updated successfully",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "$ref": "#/definitions/dto.UserProfileResponse"
                         }
                     },
                     "400": {
@@ -396,6 +401,11 @@
         },
         "/users/profile/change-password": {
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Change current password to a new password for account security",
                 "consumes": [
                     "application/json"
@@ -758,6 +768,23 @@
                 "pin": {
                     "type": "string",
                     "example": "123456"
+                }
+            }
+        },
+        "dto.UserProfileResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fullname": {
+                    "type": "string"
+                },
+                "phone": {
+                    "type": "string"
+                },
+                "photo": {
+                    "type": "string"
                 }
             }
         }
